# ptcg-core

./: COMMIT_CONVENTION.md  Cargo.toml  PROJECT_STRUCTURE.md  README.md  TODO.md
.github/: GIT_SETUP.md
examples/: basic_game.rs  effects_demo.rs
src/: core.rs  effects.rs  events.rs  lib.rs  network.rs  rules.rs
src/core/: card.rs  deck.rs  effects.rs  events.rs  game.rs  mod.rs  player.rs  rules.rs
src/core/card/: abilities.rs  attacks.rs  energy.rs  mod.rs  pokemon.rs  trainer.rs  types.rs
src/core/deck/: manager.rs  mod.rs  validation.rs
src/core/effects/: energy_effects.rs  manager.rs  pokemon_effects.rs  trainer_effects.rs  types.rs
src/core/events/: bus.rs  handlers.rs
src/core/game/: actions.rs  events.rs  mod.rs  setup.rs  state.rs  turn.rs
src/core/game/actions/: attack_actions.rs  card_actions.rs  energy_actions.rs  execution.rs  mod.rs
src/core/game/setup/: deck_setup.rs  mod.rs  mulligan_setup.rs  player_setup.rs  pokemon_setup.rs  turn_setup.rs
src/core/player/: actions.rs  conditions.rs  mod.rs  state.rs
src/core/rules/: effects.rs  engine.rs  standard.rs
src/data/: csv.rs  database.rs  export.rs  import.rs  json.rs  mod.rs
src/effects/: manager.rs  mod.rs  outcomes.rs  targets.rs
src/events/: bus.rs  handlers.rs  mod.rs  types.rs
src/network/: client.rs  mod.rs  server.rs
src/rules/: mod.rs  standard.rs  validation.rs
