[package]
name = "ptcg-core"
version = "0.1.0"
edition = "2024"
authors = ["PTCG Core Developer"]
description = "A flexible core engine for Pokemon Trading Card Game simulators"
license = "MIT OR Apache-2.0"
keywords = ["game", "cards", "pokemon", "tcg", "engine"]
categories = ["games", "simulation"]

[dependencies]
# 核心功能
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"

# 数据处理
serde_json = { version = "1.0", optional = true }
csv = { version = "1.3", optional = true }
rusqlite = { version = "0.31", optional = true }

# 规则引擎
dyn-clone = "1.0"
downcast-rs = "1.2"

# 异步支持 (for 服务端)
tokio = { version = "1.0", features = ["full"], optional = true }

[features]
default = ["json"]
json = ["serde_json"]
csv_import = ["csv"]
database = ["rusqlite"]
async = ["tokio"]
full = ["json", "csv_import", "database", "async"]

[dev-dependencies]
tokio-test = "0.4"
